# Resume-Parser

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/: extractor.py  pipeline.py
